feat: Add a faded black background.

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             padding: 0;
             border: none;
             overflow: auto;
-            background: none;
+            background-color: rgba(0, 0, 0, 0.25);
             color: white;
             font-family: sans-serif;
         }
